#404 prevent wrap of compose mail labels

--- a/src/app/mail/mail-sidebar/compose-mail/compose-mail.component.scss
+++ b/src/app/mail/mail-sidebar/compose-mail/compose-mail.component.scss
@@ -133,3 +133,7 @@ textarea:disabled {
 ::ng-deep pre {
   overflow: hidden !important;
 }
+
+.mail-label {
+  white-space: nowrap;
+}
